--- a/webproje/özgeçmiş.html
+++ b/webproje/özgeçmiş.html
@@ -41,9 +41,83 @@
       </div>
     </div>
   </nav>
+
+  
+            
+  <section class="p-3 text-center">
+    <div class="container">
+
+        <h2 class="mb-0 font-weight-bold hakkimizda">ÖZGEÇMİŞİM</h2>
+    </div>
+</section>
+
+<table class="">
+    <tr>
+        <th>EĞİTİM</th>
+        <th>YIL</th>
+    </tr>
+    <tr>
+        <td>Abdurrahman Vardar İlköğretim Okulu</td>
+        <td>2010-2014</td>
+    </tr>
+    <tr>
+        <td>Abdurrahman Vardar Ortaokulu </td>
+        <td>2014-2018</td>
+    </tr>
+    <tr>
+        <td>Özlüce Anadolu Lisesi</td>
+        <td>2018-2020</td>
+    </tr>
+    <tr>
+        <td>Sercan Şahin Anadolu Lisesi</td>
+        <td>2020-2022</td>
+    </tr>
+    <tr>
+      <td>Karadeniz Teknik Üniversitesi Bilgisayar Mühendisliği</td>
+      <td>2022-2023</td>
+  </tr>
+    <tr>
+        <td>Sakarya Üniversitesi Bilgisayar Mühendisliği</td>
+        <td>2023-2024</td>
+    </tr>
+</table>
+<br>
+<table class="tablokonum">
+    <tr>
+        <th>Becerilerim</th>
+
+    </tr>
+    <tr>
+        <td>C++, Orta Seviye</td>
+
+    </tr>
+    <tr>
+        <td>C#, Orta Seviye </td>
+
+    </tr>
+    <tr>
+        <td>HTML,CSS; Orta Seviye</td>
+
+    </tr>
+</table>
+<br>
+<table class="tablokonum">
+  <tr>
+    <th>Yabancı Dil</th>
+
+</tr>
+    <tr>
+        <td>İngilizce, B1</td>
+
+    </tr>
+    
+</table>
+
+</body>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   
   <footer class="py-5  text-white text-center fixed-bottom">
     Web Teknolojileri Projesi © Emirhan Çoruh 2024
   </footer>
+  </html>
