--- a/webproje/şehrim.html
+++ b/webproje/şehrim.html
@@ -9,7 +9,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap" rel="stylesheet">
 </head>
 <body>
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-secondary ">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">Emirhan Çoruh</a>
@@ -43,9 +42,144 @@
     </div>
   </div>
 </nav>
+
+<div class="content">
+  <div class="row">
+    <div class="col-md-7"style="padding-left: 4em;">
+   <h1 style="margin-top: 40px;">Bursa</h1>
+  <article> 
+      <p> 
+      Bursa, Türkiye'nin Marmara Bölgesi'nde yer alan tarihi zenginliği ve doğal güzellikleriyle ön plana çıkan bir
+      şehirdir. Yaklaşık 7000 yıllık bir geçmişe sahip olan Bursa, tarih boyunca birçok medeniyete ev sahipliği yapmıştır.</p><br>
+     <p>Şehrin tarihi, M.Ö. 3. binyıla kadar uzanır ve Hititler, Frigler, Lidyalılar, Persler, Romalılar ve Bizanslılar gibi
+       birçok uygarlığa ev sahipliği yapmıştır. Ancak Bursa'nın en parlak dönemi, Osmanlı İmparatorluğu'nun ilk başkenti 
+       olarak seçilmesiyle başlar. Osmanlı Devleti'nin kurucusu Osman Gazi tarafından fethedilen şehir, Osmanlı İmparator
+       luğu'nun 1326-1365 yılları arasındaki başkenti olmuştur.
+      </p><br>
+      <p>
+         Bursa'nın tarihi dokusunu oluşturan en önemli yapılarından biri, UNESCO Dünya Mirası Listesi'nde yer alan Bursa ve 
+        Cumalıkızık: Osmanlı İmparatorluğu'nun Doğuş Yeri adlı alanıdır. Bu alan, Osmanlı İmparatorluğu'nun kuruluş döneminden
+         kalan tarihi yapıları ve mimari mirasıyla ziyaretçilerini büyüler. Şehrin simgelerinden biri olan Ulu Cami, Osmanlı 
+         döneminin en büyük ve en görkemli yapılarından biridir. Yeşil Türbe ise Osmanlı'nın kurucusu Osman Gazi'nin türbesi 
+         olarak bilinir ve şehrin panoramik manzarasını oluşturan bir parçadır. Bursa, aynı zamanda Türkiye'nin ilk ve en önemli 
+         sanayi merkezlerinden biridir. Özellikle tekstil ve otomotiv endüstrisi, şehrin ekonomisinde önemli bir yer tutar. Bununla 
+         birlikte, doğal güzellikleriyle de ünlüdür. Uludağ, kış sporları için popüler bir destinasyon olmasının yanı sıra, doğa
+          yürüyüşleri ve piknikler için de tercih edilen bir alanı temsil eder.</p><br>
+          <p>Bursa'nın tarihi ve kültürel mirası, şehri ziyaret edenleri kendine çeker ve onlara zengin bir deneyim sunar. 
+            Geleneksel Osmanlı mutfağından lezzetler, tarihi çarşıları ve hamamlarıyla Bursa, ziyaretçilerine unutulmaz bir 
+            seyahat vadeder.
+          </p><br>
+        <p>Bursa ilinin güncel nüfusu 3.250.288.'dir. Güncel yüz ölçümü 10.819 km2, rakımı ise 100 metredir.</p><br>
+  </article>
+</div>
+<div class=" col-md-3" >
+  <br><br><br>
+  <img class="align-items-center rounded" src="bursamudanya.jpeg" weiht="200" height="300" > 
+  <br><br>
+  <img class="align-items-center rounded" src="bursa.jpg" weiht="200" height="300" > 
+  <br><br><br>
+</div> 
+
+<div class="conteiner">
+  <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+          <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+              <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              </div>
+              <div class="carousel-inner" class="resim">
+                  <div class="carousel-item active" data-bs-interval="10000">
+                      <a href="#1">
+                          <img src="uludag.jpg" class="d-block w-100" alt="..." height="500">
+                      </a>
+                      <div class="carousel-caption d-none d-md-block">
+                        <h5 style="color: rgb(0, 0, 0); font-weight: bold; font-size: 25px;">Uludağ</h5>
+                      </div>
+                      
+                  </div>
+                  <div class="carousel-item" data-bs-interval="10000">
+                      <a href="#2">
+                          <img src="cumalıkızık.jpg" class="d-block w-100" alt="..." height="500">
+                      </a>
+                      <div class="carousel-caption d-none d-md-block">
+                      <h5 style="color: rgb(0, 0, 0); font-weight: bold; font-size: 25px;">Cumalıkızık</h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <a href="#3">
+                        <img src="ulucami.jpeg" class="d-block w-100" alt="..." height="500">
+                    </a>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5 style="color: rgb(0, 0, 0); font-weight: bold; font-size: 25px;">Ulucami</h5>
+                      </div>
+                </div>
+                  <div class="carousel-item">
+                      <a href="#4">
+                          <img src="kebap.jpeg" class="d-block w-100" alt="..." height="500">
+                      </a>
+                      <div class="carousel-caption d-none d-md-block">
+                        <h5 style="color: rgb(0, 0, 0); font-weight: bold; font-size: 25px;">Bursa Kebabı</h5>
+                      </div>
+                  </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+          </div>
+      </div>
+      <div class="col-md-2"></div>
+  </div>
+</div>
+
+
+<div class="content" style="padding-left: 4em;" id="1">
+  <h2>Uludağ</h2>
+  <p>
+      &nbsp Uludağ, Türkiye'nin en önemli kış turizmi merkezlerinden biridir. Bursa'nın yakınında yer alan bu dağ, 2.543 metre yüksekliğiyle dikkat çeker. Kış aylarında yoğun kar yağışıyla kaplanan Uludağ, kayak ve snowboard gibi sporların yanı sıra muhteşem
+      manzarasıyla da ziyaretçilerini cezbeder. Aynı zamanda, yaz aylarında da trekking ve doğa yürüyüşleri için ideal bir mekandır. Bölgede bulunan tesisler ve oteller, konforlu konaklama imkanları sunar. Türkiye'nin ilk kayak merkezi olan Uludağ, modern
+      teleferik sistemiyle de ünlüdür. Ayrıca, zengin flora ve fauna çeşitliliğiyle de dikkat çeker ve doğa tutkunları için keşfedilmeyi bekleyen bir cennettir.
+  </p>
+</div><br>
+<div class="content" style="padding-left: 4em;" id="2">
+  <h2>Cumalıkızık</h2>
+  <p>
+      &nbsp Cumalıkızık, Bursa'nın tarihi ve kültürel mirasını yansıtan önemli bir köydür. 14. yüzyılda Osmanlı İmparatorluğu'nun kuruluş döneminde kurulan bu köy, UNESCO Dünya Mirası Listesi'nde yer alır. Taş evleri, dar sokakları ve tarihi atmosferiyle
+      ziyaretçilerini büyüler. Köy, Osmanlı dönemine ait mimari özellikleriyle öne çıkar ve bu özelliklerin günümüze kadar korunmuş olması dikkat çekicidir. Cumalıkızık, doğal güzellikleriyle de ön plana çıkar ve ziyaretçilerine huzurlu bir atmosfer sunar.
+      Bölgede yer alan restoranlar ve kafeler, yöresel lezzetlerin tadını çıkarmak isteyenleri ağırlar. Ayrıca, köyde bulunan tarihi cami ve hamam gibi yapılar da ziyaret edilmeye değerdir. Cumalıkızık, Bursa'nın tarih ve doğa ile iç içe olan cazibe merkez
+      lerinden biridir ve ziyaretçilerine unutulmaz bir deneyim sunar.
+  </p>
+</div><br>
+<div class="content" style="padding-left: 4em;" id="3">
+  <h2>Ulucami</h2>
+  <p>
+      &nbsp Bursa Ulucami, Osmanlı İmparatorluğu'nun ilk dönemlerinden kalma muhteşem bir ibadet ve mimari eserdir. 1399 yılında yapılmaya başlanan cami, Osmanlı mimarisinin en önemli örneklerinden biridir. İmparatorluğun kurucusu Osman Gazi'nin torunu
+      Yıldırım Bayezid tarafından yaptırılmıştır. Yapımında kullanılan 20.000'den fazla mavi çini, caminin iç mekanını büyüleyici kılar. 20 kubbesi ve ıslak zeminiyle oldukça geniş bir iç alana sahiptir. Giriş kapısı, taş işçiliği ve detaylı süslemeleriyle
+      dikkat çeker. Ayrıca, caminin minberi ve mihrabı da incelikli işçiliğiyle bilinir. Bursa Ulucami, her yıl binlerce yerli ve yabancı ziyaretçiyi ağırlar ve İslam kültürü ve tarihine ilgi duyanlar için önemli bir durak olma özelliğini korur.
+  </p>
+</div><br>
+<div class="content" style="padding-left: 4em;" id="4">
+  <h2>Bursa Kebabı</h2>
+  <p>
+      &nbsp Bursa kebabı, Türk mutfağının lezzetli bir örneğidir ve özellikle Bursa şehrinin gastronomik simgelerinden biridir. İnce dilimlenmiş dana etinin, özel baharatlarla marine edilerek şişe dizilip mangalda pişirilmesiyle hazırlanır. Etin lezzetini
+      artıran bu özel baharat karışımı, Bursa kebabını diğer kebaplardan ayıran önemli bir unsurdur. Genellikle yanında taze ekmek, közlenmiş biber ve domates ile servis edilir. Bursa kebabı, tarih boyunca Osmanlı İmparatorluğu'nun önemli bir şehri olan
+      Bursa'da geliştirilmiştir. Geleneksel tarifini koruyarak günümüze kadar ulaşan bu lezzet, yerli halkın yanı sıra şehre gelen ziyaretçilerin de ilgisini çeker. Bursa kebabı, Türk mutfağının zengin ve lezzetli çeşitlerinden biri olarak günümüzde de
+      popülerliğini korumaktadır.
+  </p>
+</div><br>
+</body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   
-  <footer class="py-5  text-white text-center fixed-bottom">
+  <footer class="py-5  text-white text-center  static-bottom">
     Web Teknolojileri Projesi © Emirhan Çoruh 2024
   </footer>
+  </html>
