--- a/webproje/takımımız.html
+++ b/webproje/takımımız.html
@@ -8,7 +8,9 @@
 <link rel="stylesheet" href="styletakımımız.css">
 <link href="https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap" rel="stylesheet">
 </head>
-<nav class="navbar navbar-expand-lg navbar-dark bg-secondary ">
+<body>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Emirhan Çoruh</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +34,7 @@
             <a class="nav-link" href="takımımız.html">Takımımız</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
+            <a class="nav-link" href="login.html">Login</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="iletişim.html">İletişim</a>
@@ -41,14 +43,81 @@
       </div>
     </div>
   </nav>
+
+  <div class="content">
+    <div class="row">
+      <div class="col-md-7"style="padding-left: 2em;">
+     <h1 style="margin-top: 40px;">Bursaspor</h1>
+    <article> 
+        <p> 
+          Türk futbolunun köklü kulüplerinden biri olan Bursaspor, sadece sahadaki başarılarıyla değil, aynı zamanda tutkulu 
+          taraftar grubuyla da ön plana çıkar. 1963 yılında kurulan bu efsanevi kulüp, Bursa şehrinin futboldaki gurur kaynağı 
+          haline gelmiştir.</p><br>
+       <p>Bursaspor'un tarihindeki en parlak dönemlerden biri, 2009-2010 sezonunda yaşandı. O sezon, Bursaspor Süper Lig'de büyük 
+        takımların gölgesinde kalmışken, şampiyonluk için mücadele etti. Takım, gösterdiği istikrarlı performans ve olağanüstü
+         mücadelesiyle ligi zirvede tamamlayarak tarihi bir şampiyonluk yaşadı. Bu zafer, sadece Bursaspor tarihinde değil, Türk
+          futbolunda da unutulmaz bir yer edindi.
+        </p><br>
+        <p>
+          Bursaspor'un başarısında, Yeşil Timsahlar olarak bilinen tutkulu taraftar grubunun büyük etkisi vardı. Maç günlerinde
+           stadyumu yeşil-beyaz renklere büründüren ve takımlarını desteklemek için canla başla tezahürat yapan bu taraftarlar, 
+           Bursaspor'un 12. adamı olarak kabul edilirler. Taraftarlarının coşkusu ve desteği, takımı başarıya taşımada önemli bir
+            rol oynar.</p><br>
+            <p>Son 5-6 sene içinde ciddi bir çöküş yaşayan Bursaspor önce 2018-2019 sezonunda Spor Toto 1. Lig'e düşüp daha
+               sonra yaşadığı ekonomik krizin de etkisiyle  2021-22 sezonunda 1. Lig'de sezonu 17. tamamlayarak tarihinde ilk kez
+                2. Lig'e düştü. Bu sene de sezon tamalanmadan 32. hafta maçında sahasında 1461 Trabzon'a 2-1 mağlup oldu ve ligin 
+                bitimine 4 hafta kala 3. Lig'e düştü. 
+            </p><br>
+          <p>Her şeye rağmen Bursaspor Türk futbolu için taraftarıyla beraber öenmli bir yere sahiptir umarım yakın zamanda hak ettiği
+            yere tekrar geri döner.</p><br>
+    </article>
+  </div>
+<div class=" col-md-3"style="margin: auto;">
+  <br><br><br>
+  <img class="align-items-center rounded" src="bs8.png" weiht="200" height="300" > 
+  <br><br>
+  <img class="align-items-center rounded" src="bs10.webp" weiht="200" height="250" > 
+  <br><br><br>
+</div> 
+
+  <div class="container mt-3">
+    <div class="row justify-content-center">
+      <div class="col-sm-10">
+        <h3 id="sehirdenkareler" style="text-align:center;">Şampiyonluk Sezonundan Kareler</h3>
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner fotograf-duzenle">
+            <div class="carousel-item fotograf-duzenleindex active">
+              <img src="bs1.jpg" class="d-block w-100 object-fit resim-boyut" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="bs5.jpg" class="d-block w-100 object-fit resim-boyut" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="bs3.jpg" class="d-block w-100 object-fit resim-boyut" alt="...">
+            </div>
+          <div class="carousel-item">
+              <img src="bs4.jpg" class="d-block w-100 object-fit resim-boyut" alt="...">
+          </div>
+        </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+
+    <footer class="py-5  text-white text-center  static-bottom">
+      Web Teknolojileri Projesi © Emirhan Çoruh 2024
+    </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  
-  <footer class="py-5  text-white text-center fixed-bottom">
-    Web Teknolojileri Projesi © Emirhan Çoruh 2024
-  </footer>
-
-
-
-
+</body>
 </html>
