--- a/webproje/özgeçmiş.html
+++ b/webproje/özgeçmiş.html
@@ -3,10 +3,11 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Web Sitem</title>
+<script src="https://kit.fontawesome.com/d5b5e71fcf.js" crossorigin="anonymous"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="stylesheet" href="styleözgeçmiş.css">
 <link href="https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap" rel="stylesheet">
+<title>Web Sitem</title>
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-secondary ">
     <div class="container-fluid">
@@ -32,10 +33,10 @@
             <a class="nav-link" href="takımımız.html">Takımımız</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="iletişim.html">Login</a>
+            <a class="nav-link" href="login.html">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">İletişim</a>
+            <a class="nav-link" href="iletisim.html">İletişim</a>
           </li>
         </ul>
       </div>
