--- a/webproje/iletisim.html
+++ b/webproje/iletisim.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue-router@3.5.3/dist/vue-router.js"></script>
 <script src="https://kit.fontawesome.com/d5b5e71fcf.js" crossorigin="anonymous"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="stylesheet" href="styleiletisim.css">
@@ -77,33 +79,33 @@
 </header>
 
 <main>
-  <div class="container">
-    <form action="mesajkontrol.html" name="Form" onsubmit="return control()">
+  <div id="app" class="container">
+    <form @submit.prevent="submitForm">
         <div class="row">
             <div class="col">
                 <label for="name">İsim</label>
-                <input type="text" name="name" class="form-control" placeholder="İsminizi Giriniz">
+                <input type="text" v-model="formData.name" class="form-control" placeholder="İsminizi Giriniz">
                 <small class="form-text text-muted">Zorunlu alan</small>
             </div>
             <div class="col">
                 <label for="lastname">Soyisim</label>
-                <input type="text" name="lastname" class="form-control" placeholder="Soyisminizi Giriniz">
+                <input type="text" v-model="formData.lastname" class="form-control" placeholder="Soyisminizi Giriniz">
                 <small class="form-text text-muted">Zorunlu alan</small>
             </div>
         </div>
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="text" name="email" class="form-control" placeholder="Emailinizi giriniz.">
+            <input type="text" v-model="formData.email" class="form-control" placeholder="Emailinizi giriniz.">
             <small class="form-text text-muted">Zorunlu alan</small>
         </div>
         <div class="form-group">
             <label for="phone">Telefon (0XXX XXX XX XX)</label>
-            <input type="text" name="phone" class="form-control" placeholder="Telefon numarınızı giriniz.">
+            <input type="text" v-model="formData.phone" class="form-control" placeholder="Telefon numarınızı giriniz.">
             <small class="form-text text-muted">Zorunlu alan</small>
         </div>
         <div class="form-group">
             <label for="message">Mesaj</label>
-            <textarea name="message" id="message" rows="5" class="form-control"></textarea>
+            <textarea v-model="formData.message" rows="5" class="form-control"></textarea>
             <small class="form-text text-muted">Zorunlu alan</small>
         </div>
         <button type="submit" class="btn btn-primary">Gönder</button>
@@ -111,50 +113,44 @@
   </div>
 </main>
 
-<!-- JAVASCRIPT -->
+<!-- Vue.js -->
 <script>
-    function control() {
-        var x = document.forms["Form"]["name"].value;
-        if (x == "") {
-            alert("İsim Boş Bırakılamaz");
-            return false;
-        }
-        var w = document.forms["Form"]["lastname"].value;
-        if (w == "") {
-            alert("Soyisim Boş Bırakılamaz");
-            return false;
-        }
-
-        var y = document.forms["Form"]["email"].value;
-        if (y == "") {
-            alert("Mail Kısmı Boş Bırakılamaz!");
-            return false;
-        }
-        var v = document.forms["Form"]["phone"].value;
-        if (v == "") {
-            alert("Telefon Numarası Kısmı Boş Bırakılamaz!");
-            return false;
-        }
-        var z = document.forms["Form"]["message"].value;
-        if (z == "") {
-            alert("Mesaj Kısmı Boş Bırakılamaz!");
-            return false;
+  var app = new Vue({
+    el: '#app',
+    data: {
+      formData: {
+        name: '',
+        lastname: '',
+        email: '',
+        phone: '',
+        message: ''
+      }
+    },
+    methods: {
+      submitForm: function() {
+        if (!this.formData.name || !this.formData.lastname || !this.formData.email || !this.formData.phone || !this.formData.message) {
+          alert("Tüm alanları doldurunuz!");
+          return;
         }
 
         var forMail = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$/;
-        if (forMail.test(y) == false) {
-            alert("Geçersiz Mail Adresi!");
-            return false;
+        if (!forMail.test(this.formData.email)) {
+          alert("Geçersiz Mail Adresi!");
+          return;
         }
+        
         var forPhone = /^0[0-9]{3} [0-9]{3} [0-9]{2} [0-9]{2}$/;
-        if (forPhone.test(v) == false) {
-            alert("Geçersiz Telefon Numarası!");
-            return false;
+        if (!forPhone.test(this.formData.phone)) {
+          alert("Geçersiz Telefon Numarası!");
+          return;
         }
+
+       
+        window.location.href = 'mesajkontrol.html';
+      }
     }
+  });
 </script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <footer class="py-5 text-white text-center static-bottom">
   Web Teknolojileri Projesi © Emirhan Çoruh 2024
 </footer>
