--- a/webproje/mesajkontrol.html
+++ b/webproje/mesajkontrol.html
@@ -5,14 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://kit.fontawesome.com/d5b5e71fcf.js" crossorigin="anonymous"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<link rel="stylesheet" href="stylehiletisim.css">
+<link rel="stylesheet" href="styleiletisim.css">
 <link href="https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap" rel="stylesheet">
-
+<title>Web Sitem</title>
 </head>
 <body>
 
-<title>Web Sitem</title>
-</head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Emirhan Çoruh</a>
@@ -46,110 +44,73 @@
       </div>
     </div>
   </nav>
-<header>
 
+<header>
     <section class="p-5 text-center hakkimizda">
         <div class="container">
-
-            <h2 class="mb-5 font-weight-bold">Tebrikler.Başarılı bir şekilde mesajınızı gönderdiniz.</h2>
-            <hr class="ayraciletisim"><i class="far fa-handshake ikoniletisim"></i>
+            <h2 class="mb-5 font-weight-bold">Tebrikler. Başarılı bir şekilde mesajınızı gönderdiniz.</h2>
         </div>
     </section>
-
 </header>
 
 <main>
     <div class="container">
-
         <div class="row">
-
-
-
-
-            <script type="text/javascript">
-                function getParameterByName(name, url) {
-                    if (!url) url = window.location.href;
-                    name = name.replace(/[\[\]]/g, '\\$&');
-                    var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
-                        results = regex.exec(url);
-                    if (!results) return null;
-                    if (!results[2]) return '';
-                    return decodeURIComponent(results[2].replace(/\+/g, ' '));
-                }
-
-                var name = getParameterByName('name');
-                var lastname = getParameterByName('lastname');
-                var email = getParameterByName('email');
-                var phone = getParameterByName('phone');
-                var message = getParameterByName('message');
-
-            </script>
-
             <table class="table">
                 <tbody>
                     <tr>
                         <td>İsminiz</td>
-                        <td>
-                            <script>
-                                document.write(name);
-                            </script>
-                        </td>
+                        <td id="name"></td>
                     </tr>
                     <tr>
                         <td>Soyisminiz</td>
-                        <td>
-                            <script>
-                                document.write(lastname);
-                            </script>
-                        </td>   
+                        <td id="lastname"></td>   
                     </tr>
-
                     <tr>
                         <td>E-Mail</td>
-                        <td>
-                            <script>
-                                document.write(email);
-                            </script>
-                        </td>
+                        <td id="email"></td>
                     </tr>
-        
                     <tr>
                         <td>Telefon Numaranız</td>
-                        <td>
-                            <script>
-                                document.write(phone);
-                            </script>
-                        </td>   
+                        <td id="phone"></td>   
                     </tr>
-
                     <tr>
                         <td>Mesajınız</td>
-                        <td>
-                            <script>
-                                document.write(message);
-                            </script>
-                        </td>   
+                        <td id="message"></td>   
                     </tr>
-
                 </tbody>
-
             </table>
-
-
         </div>
-
     </div>
-
 </main>
 
+<script>
+    function getParameterByName(name, url) {
+        if (!url) url = window.location.href;
+        name = name.replace(/[\[\]]/g, '\\$&');
+        var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
+            results = regex.exec(url);
+        if (!results) return null;
+        if (!results[2]) return '';
+        return decodeURIComponent(results[2].replace(/\+/g, ' '));
+    }
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <footer class="py-5 text-white text-center static-bottom">
-      Web Teknolojileri Projesi © Emirhan Çoruh 2024
-    </footer>
-    
+    var name = getParameterByName('name');
+    var lastname = getParameterByName('lastname');
+    var email = getParameterByName('email');
+    var phone = getParameterByName('phone');
+    var message = getParameterByName('message');
+
+    document.getElementById("name").innerText = name;
+    document.getElementById("lastname").innerText = lastname;
+    document.getElementById("email").innerText = email;
+    document.getElementById("phone").innerText = phone;
+    document.getElementById("message").innerText = message;
+</script>
+
+<footer class="py-5 text-white text-center static-bottom">
+  Web Teknolojileri Projesi © Emirhan Çoruh 2024
+</footer>
 
 </body>
-
 </html>
